Adding images and main hero section

--- a/Kiko's site/index.html
+++ b/Kiko's site/index.html
@@ -11,8 +11,19 @@
     <div class="navbar">
       <div class="container">
         <a href="#">Remember<span>That</span></a>
-
+        <img
+          id="mobile-cta"
+          class="mobile-menu"
+          src="./images/menu.svg"
+          alt="Open navigation"
+        />
         <nav>
+          <img
+            id="mobile-exit"
+            class="mobile-menu-exit"
+            src="./images/exit.svg"
+            alt="Close navigation"
+          />
           <ul class="primary-nav">
             <li class="current"><a href="#">Home</a></li>
             <li><a href="#">Features</a></li>
@@ -25,5 +36,25 @@
         </nav>
       </div>
     </div>
+
+    <section class="hero">
+      <div class="container">
+        <div class="left-col">
+          <p class="subhead">It's Nitty &amp; Gritty</p>
+          <h1>A Task App That Doesn't Stink</h1>
+          <div class="hero-cta">
+            <a href="#" class="primary-cta">Try for free</a>
+            <a href="#" class="watch-video-cta">
+              <img src="./images/watch.svg" alt="Watch video" /> Watch a video
+            </a>
+          </div>
+        </div>
+        <img
+          src="./images/illustration.svg"
+          class="hero-img"
+          alt="Illustration"
+        />
+      </div>
+    </section>
   </body>
 </html>
