--- a/Kiko's site/index.html
+++ b/Kiko's site/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="navbar">
       <div class="container">
-        <a href="#">Remember<span>That</span></a>
+        <a class="logo" href="#">Remember<span>That</span></a>
         <img
           id="mobile-cta"
           class="mobile-menu"
@@ -58,7 +58,7 @@
     </section>
     <section class="features-section">
       <div class="container">
-        <ul>
+        <ul class="features-list">
           <li>Unlimited Tasks</li>
           <li>SMS Task Reminders</li>
           <li>Confetti Explosions Upon Task Completions</li>
