--- a/Kiko's site/index.html
+++ b/Kiko's site/index.html
@@ -132,5 +132,17 @@
         </div>
       </div>
     </section>
+
+    <script>
+      const mobileBtn = document.getElementById("mobile-cta");
+      const nav = document.querySelector("nav"); // select by tag
+      const mobileBtnExit = document.getElementById("mobile-exit");
+      mobileBtn.addEventListener("click", () => {
+        nav.classList.add("menu-active");
+      });
+      mobileBtnExit.addEventListener("click", () => {
+        nav.classList.remove("menu-active");
+      });
+    </script>
   </body>
 </html>
