--- a/Tane's Site/tech.html
+++ b/Tane's Site/tech.html
@@ -96,6 +96,7 @@
             <h2>Videos</h2>
             <a href="/">Submit Video</a> <a href="/">Ambassadors</a>
             <a href="/">Agency</a> <a href="/">Influencer</a>
+            <a href="/">Influencer</a>
           </div>
           <div class="footer__link--items">
             <h2>Social Media</h2>
